<resources>
    <string name="app_name">GameEtub</string>
    <string name="play_now">Play now</string>
    <string name="test_player_name">Test player name</string>
    <string name="played_by">Played by: 204</string>
    <string name="category_name">Category: Sport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_thumbnail">Category Thumbnail</string>
    <string name="account_settings">Account settings</string>
    <string name="email_and_username">Edit profile</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email_hint">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="facebook_app_id">770851366918067</string>
    <string name="fb_login_protocol_scheme">fb770851366918067</string>
    <string name="user_profile">User profile</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="update_user_information">Update user information</string>
    <string name="user_profile_image_content">User profile image</string>
    <string name="password">Password</string>
    <string-array name="profile_photos">
        <item>Hello world</item>
        <item>Hello world</item>
        <item>Hello world</item>
    </string-array>
</resources>