<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfile">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/user_profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/appDarkBlue" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        />
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:id="@+id/progress_horizontal"
        android:indeterminate="true"
        android:visibility="gone"

        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:contentDescription="@string/user_profile_image_content"
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameInfoText"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"

        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userinfo_last_text"
        app:layout_constraintTop_toBottomOf="@+id/usernameInfoText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/userinfo_last_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/user_total_point"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameLabel"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        app:startIconDrawable="@drawable/ic_user"
        app:layout_constraintTop_toBottomOf="@+id/user_total_point"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/usernameLabel"
            android:hint="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/usernameInput"
            android:inputType="text"
            android:imeOptions="flagNavigateNext"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLabel"
        android:id="@+id/passwordInputLabel"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        app:startIconDrawable="@drawable/ic_lock"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/passwordInput"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLabel"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/update_user_information"
        android:padding="15dp"
        android:id="@+id/updateAccount"
        />
</androidx.constraintlayout.widget.ConstraintLayout>