<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/appDarkBlue" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:id="@+id/progress_horizontal"
        android:indeterminate="true"
        android:visibility="gone"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/loginItemsContainer"

        app:layout_constraintTop_toBottomOf="@+id/progress_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:id="@+id/continueWithLayout"
            android:layout_marginBottom="10dp"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Google"
                app:icon="@drawable/ic_google"
                app:iconGravity="textStart"
                android:layout_weight="0.5"
                android:backgroundTint="@color/google"
                android:padding="15dp"
                android:layout_marginRight="5dp"
                android:textAllCaps="false"
                android:id="@+id/signInWithGoogle"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Facebook"
                android:layout_weight="0.5"
                app:icon="@drawable/ic_facebook"
                app:iconGravity="textStart"
                android:layout_marginLeft="5dp"
                android:paddingVertical="15dp"
                android:backgroundTint="@color/facebook"
                android:textAllCaps="false"
                android:id="@+id/signInWithFacebook"
                />
        </LinearLayout>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@+id/continueWithLayout"
            android:background="@color/grayLighter"
            android:hint="@string/email_hint"
            android:id="@+id/usernameInput"
            android:imeOptions="flagNavigateNext"
            android:inputType="text"
            android:textSize="15sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@+id/usernameInput"
            android:background="@color/grayLighter"
            android:hint="@string/password_hint"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:id="@+id/passwordInput"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordInput"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:id="@+id/forget_password"
            android:gravity="end|center"
            android:text="@string/forget_password"
            android:textColor="@color/appPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.DropDownItem"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:text="Login"
            android:layout_below="@+id/forget_password"
            android:id="@+id/loginSubmit"
            android:textAllCaps="false"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginSubmit"
            android:text="Don't have an account yet?"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:id="@+id/orText"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/orText"
            android:padding="15dp"
            android:text="Create Account"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/createAccountInLogin"
            android:textAllCaps="false"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>