<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Settings">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/appDarkBlue" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:id="@+id/divider"
        style="@style/Divider"
        />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/divider"
                android:text="@string/account_settings"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:id="@+id/settingsSubtitle1"
                />
            <RelativeLayout
                android:id="@+id/editProfileSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/settingsSubtitle1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:paddingVertical="15dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_user_pink"
                    android:id="@+id/emailOptionIcon"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_toEndOf="@id/emailOptionIcon"
                    android:textSize="16dp"
                    android:text="@string/email_and_username"
                    android:paddingHorizontal="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/emailOptionText"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_right_arrow"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@+id/editProfileSettings"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/divider3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider3"
                android:paddingTop="5dp"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/settingsSubtitle2"
                android:text="Notification settings"
                />

            <RelativeLayout
                android:id="@+id/settingsSubscribeLatestNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/settingsSubtitle2"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:paddingVertical="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_subscribe"
                    android:id="@+id/emailOptionIcon3"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_toEndOf="@id/emailOptionIcon3"
                    android:textSize="16dp"
                    android:text="Subscribe for latest news"
                    android:paddingHorizontal="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/emailOptionText3"
                    />
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_right_arrow"
                    android:id="@+id/latestNewsSwitch"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@+id/settingsSubscribeLatestNews"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/divider4"
                />
            <RelativeLayout
                android:id="@+id/allowNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/divider4"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:paddingVertical="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notification"
                    android:id="@+id/emailOptionIcon4"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_toEndOf="@id/emailOptionIcon4"
                    android:textSize="16dp"
                    android:text="Allow notifications"
                    android:paddingHorizontal="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/emailOptionText4"
                    />
                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_right_arrow"
                    android:id="@+id/switchAllowNotifications"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/allowNotifications"
                style="@style/Divider"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/divider5"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider5"
                android:id="@+id/settingsSubtitle3"
                android:padding="5dp"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="Contact Us"
                />
            <RelativeLayout
                android:id="@+id/settingsAboutItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/settingsSubtitle3"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:paddingVertical="15dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_info"
                    android:id="@+id/emailOptionIcon6"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_toEndOf="@id/emailOptionIcon6"
                    android:textSize="16dp"
                    android:text="About us"
                    android:paddingHorizontal="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/emailOptionText6"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_right_arrow"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/settingsAboutItem"
                style="@style/Divider"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/divider7"
                />



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/settingsAboutItem"
                style="@style/Divider"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/divider9"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider9"
                android:layout_marginTop="10dp"
                android:text="Log out"
                android:padding="15dp"
                android:layout_marginHorizontal="10dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/logOutButton"
                />
</androidx.constraintlayout.widget.ConstraintLayout>